[package]

name = "slab"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Update doc URL.
#   - Cargo.toml
#   - README.md
# - Create git tag
version = "0.4.2"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Pre-allocated storage for a uniform data type"
documentation = "https://docs.rs/slab/0.4.2/slab/"
homepage = "https://github.com/carllerche/slab"
repository = "https://github.com/carllerche/slab"
readme = "README.md"
keywords = ["slab", "allocator", "no_std"]
categories = ["memory-management", "data-structures", "no_std"]

[features]
std = []
default = ["std"]

[dependencies]
serde = { version = "1.0.95", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_test = "1"
