[package]

name = "slab"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Create git tag
version = "0.4.3"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
license = "MIT"
description = "Pre-allocated storage for a uniform data type"
documentation = "https://docs.rs/slab"
homepage = "https://github.com/tokio-rs/slab"
repository = "https://github.com/tokio-rs/slab"
readme = "README.md"
keywords = ["slab", "allocator", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]
exclude = ["/.*"]

[features]
std = []
default = ["std"]

[dependencies]
serde = { version = "1.0.95", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_test = "1"
