[package]

name = "generic_slab"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Create git tag
version = "0.1.0"
authors = [ "Bergmann89 <info@bergmann89.de>", "Carl Lerche <me@carllerche.com>" ]
edition = "2018"
rust-version = "1.31"
license = "MIT"
description = "Pre-allocated storage for a uniform data type"
repository = "https://github.com/Bergmann89/generic_slab"
keywords = [ "slab", "allocator", "no_std", "fixed", "generic" ]
categories = [ "memory-management", "data-structures", "no-std" ]
exclude = [ "/.*" ]

[features]
std = [ ]
default = [ "std" ]
range = [ ]

[build-dependencies]
autocfg = "1"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = [ "alloc" ] }

[dev-dependencies]
arrayvec = "0.7.4"
rustversion = "1"
serde = { version = "1", features = [ "derive" ] }
serde_test = "1"
